--- a/options.html
+++ b/options.html
@@ -15,32 +15,19 @@
     <!-- Begin page content -->
     <div class="container grid">
         <div class="page-header">
-            <h1>Zalando Chrome OAuth Bearer Plugin</h1>
+            <h1>Kubernetes Chrome Token Plugin</h1>
         </div>
         <div class="form-horizontal">
             <div class="form-group">
-                <label for="authURL" class="col-md-2 control-label">Token Service URL:</label>
+                <label for="url" class="col-md-2 control-label">Url:</label>
                 <div class="col-md-9">
-                    <input id="authURL" class="form-control" type="text" name="authURL"/>
+                    <input id="url" type="text" name="url" class="form-control"/>
                 </div>
             </div>
             <div class="form-group">
-                <label for="url" class="col-md-2 control-label">Urls:</label>
+                <label for="token" class="col-md-2 control-label">Token:</label>
                 <div class="col-md-9">
-                    <textarea rows="10" id="url" class="form-control" type="text" name="url">
-                    </textarea>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="username" class="col-md-2 control-label">User Name:</label>
-                <div class="col-md-9">
-                    <input id="username" type="text" name="username" class="form-control"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-md-2 control-label">Password:</label>
-                <div class="col-md-9">
-                    <input id="password" type="password" name="password" class="form-control"/>
+                    <input id="token" type="text" name="token" class="form-control"/>
                 </div>
             </div>
             <div class=" col-md-offset-2 col-md-9">
